Fix AM and parser bugs
Chapter 8 projects - passed

--- a/tests/Prog.vm
+++ b/tests/Prog.vm
@@ -1,6 +1,6 @@
 // comment
 push constant 510
-pop temp 6 // inline comment
+pop temp 6 // inline comment conining "and": and
 
 push that 5
     add
